<resources>
    <string name="app_name">Ah Boy Kopitiam</string>
    <string name="loading_text">LOADING...</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="slogan_text">%1$s</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="retailer_tag_line">
Welcome to Ah Boy Kompitiam! We offer authentic coffee and delicious snacks for you to indulge in the unique flavors and culture of Asia. Please relax and enjoy freshly brewed coffee and classic snacks in our cozy environment, making your day full of joy and satisfaction.</string>
    <string name="loading">Loading…</string>
    <string name="welcome_kopitiam">Welcome To Ah Boy Kopitiam</string>
    <string name="welcome_to_ah_boy_kopitiam">Ah boy kopitiam</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_btn">Login</string>
    <string name="description_login">Not yet registered? Signup</string>
    <string name="email_signup">Email</string>
    <string name="password_signup">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="signup_des">Already an user? Login</string>
    <string name="full_name">Full Name</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="number_phone">Number Phone</string>
    <string name="des_homepage">Experience the homely warmth of Ah Boy Kopitiam, savour the taste of home.</string>
    <string name="ah_boy">Ah Boy</string>
    <string name="kopitiam">Kopitiam</string>
    <string name="view_drinks_menu">View Drinks Menu</string>
    <string name="view_foods_menu">View Foods Menu</string>
    <string name="view_lists_of_user">View Lists of User</string>
    <string name="logout">Logout</string>
    <string name="close">Close</string>
    <string name="dialoguser">dialoguser</string>
    <string name="sign_up_titile">Sign_Up</string>
    <string name="login_title">login</string>
    <string name="menu_drinks">Menu Drinks</string>
    <string name="milo">milo</string>
    <string name="milo_ice">Milo ICE</string>
    <string name="price_rm_3_50">Price : RM 3.50</string>
    <string name="cappuccino_img">cappuccino_img</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="price_rm_6_50">Price : RM 6.50</string>
    <string name="sirap_img">sirap_img</string>
    <string name="sirap_ice">SIRAP ICE</string>
    <string name="price_rm_4_50">Price : RM 4.50</string>
    <string name="teh_o_img">teh_o_img</string>
    <string name="teh_o_ice">Teh O Ice</string>
    <string name="price_rm_3_80">Price : RM 3.80</string>
    <string name="matcha_latte_img">matcha_latte_img</string>
    <string name="matcha_latte">matcha latte</string>
    <string name="price_rm_8_50">Price : RM 8.50</string>
    <string name="latte_img">latte_img</string>
    <string name="latte">latte</string>
    <string name="price_rm_7_50">Price : RM 7.50</string>
    <string name="espresso_img">Espresso_img</string>
    <string name="espresso">Espresso</string>
    <string name="price_rm_8_50_2">Price : RM 8.50</string>
    <string name="hot_coco_img">hot_coco_img</string>
    <string name="hot_chocolate">Hot chocolate</string>
    <string name="price_rm_5_50">Price : RM 5.50</string>
    <string name="ice_lemon_img">ice_lemon_img</string>
    <string name="ice_lemon_tea">ice lemon tea</string>
    <string name="price_rm_10_50">Price : RM 10.50</string>
    <string name="mocha_ice_img">mocha_ice_img</string>
    <string name="price_rm_12_50">Price : RM 12.50</string>
    <string name="mocha_ice">mocha ice</string>
    <string name="back">back</string>
    <string name="kueyteow_img">kueyteow_img</string>
    <string name="bihun_img">bihun_img</string>
    <string name="sandwich_img">sandwich_img</string>
    <string name="nasilemak_img">nasilemak_img</string>
    <string name="maggi_img">maggi_img</string>
    <string name="menu_foods">Menu Foods</string>
    <string name="bihun_goreng">Bihun Goreng</string>
    <string name="price_rm_12_50_1">Price : RM 12.50</string>
    <string name="kuey_teow_goreng">Kuey Teow Goreng</string>
    <string name="price_rm_13_50">Price : RM 13.50</string>
    <string name="sandwich">sandwich</string>
    <string name="price_rm_6_50_1">Price : RM 6.50</string>
    <string name="nasi_lemak">nasi lemak</string>
    <string name="price_rm_5_80">Price : RM 5.80</string>
    <string name="maggi_goreng">maggi goreng</string>
    <string name="price_rm_10_50_1">Price : RM 10.50</string>
    <string name="imdiamee_img">imdiamee_img</string>
    <string name="price_rm_11_50">Price : RM 11.50</string>
    <string name="india_mee_goreng">india mee goreng</string>
    <string name="croissant">croissant</string>
    <string name="croissant_1">Croissant</string>
    <string name="price_rm_14_50">Price : RM 14.50</string>
    <string name="muffins_img1">muffins_img</string>
    <string name="muffins">Muffins</string>
    <string name="price_rm_7_50_1">Price : RM 7.50</string>
    <string name="chapati_img">Price : chapati</string>
    <string name="chapati">chapati</string>
    <string name="price_rm_5_50_1">Price : RM 5.50</string>
    <string name="nasigoreng_img">nasigoreng img</string>
    <string name="nasi_goreng">nasi goreng</string>
    <string name="price_rm_13_50_1">Price : RM 13.50</string>
    <string name="sign_up_title">SIGN UP</string>
</resources>